MAINTAINERCLEANFILES= Makefile.in

noinst_LIBRARIES = liblwgui.a

liblwgui_a_SOURCES = \
    driver.cpp driver.h \
    fight-order-dialog.cpp fight-order-dialog.h \
    hero-levels-dialog.cpp hero-levels-dialog.h \
    army-bonus-dialog.cpp army-bonus-dialog.h \
    item-bonus-dialog.cpp item-bonus-dialog.h \
    army-info-tip.cpp army-info-tip.h \
    stack-info-tip.cpp stack-info-tip.h \
    army-gains-level-dialog.cpp army-gains-level-dialog.h \
    buy-production-dialog.cpp buy-production-dialog.h \
    city-window.cpp city-window.h \
    destination-dialog.cpp destination-dialog.h \
    error-utils.cpp error-utils.h \
    fight-window.cpp fight-window.h \
    game-preferences-dialog.cpp game-preferences-dialog.h \
    game-options-dialog.cpp game-options-dialog.h \
    game-window.cpp game-window.h \
    hero-dialog.cpp hero-dialog.h \
    hero-offer-dialog.cpp hero-offer-dialog.h \
    surrender-dialog.cpp surrender-dialog.h \
    sage-dialog.cpp sage-dialog.h \
    ruin-rewarded-dialog.cpp ruin-rewarded-dialog.h \
    ruin-report-dialog.cpp ruin-report-dialog.h \
    history-report-dialog.cpp history-report-dialog.h \
    report-dialog.cpp report-dialog.h \
    triumphs-dialog.cpp triumphs-dialog.h \
    diplomacy-dialog.cpp diplomacy-dialog.h \
    diplomacy-report-dialog.cpp diplomacy-report-dialog.h \
    load-scenario-dialog.cpp load-scenario-dialog.h \
    quest-assigned-dialog.cpp quest-assigned-dialog.h \
    quest-completed-dialog.cpp quest-completed-dialog.h \
    bar-chart.cpp bar-chart.h \
    line-chart.cpp line-chart.h \
    main.cpp main.h \
    quest-report-dialog.cpp quest-report-dialog.h \
    preferences-dialog.cpp preferences-dialog.h \
    splash-window.cpp splash-window.h \
    image-helpers.cpp image-helpers.h \
    gtksdl.c gtksdl.h \
    glade-helpers.h \
    input-helpers.h

INCLUDES = \
   $(GTKMM_CFLAGS) \
   $(SDL_CFLAGS)

AM_CXXFLAGS = -Wall
