#   Copyright (C) 2007, Ole Laursen
#   Copyright (C) 2007, 2008 Ben Asselstine
# 
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
# 
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU Library General Public License for more details.
# 
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
#   02110-1301, USA.
MAINTAINERCLEANFILES= Makefile.in

noinst_LIBRARIES = liblwgui.a

liblwgui_a_SOURCES = \
    driver.cpp driver.h \
    fight-order-dialog.cpp fight-order-dialog.h \
    hero-levels-dialog.cpp hero-levels-dialog.h \
    army-bonus-dialog.cpp army-bonus-dialog.h \
    item-bonus-dialog.cpp item-bonus-dialog.h \
    army-info-tip.cpp army-info-tip.h \
    stack-info-tip.cpp stack-info-tip.h \
    army-gains-level-dialog.cpp army-gains-level-dialog.h \
    buy-production-dialog.cpp buy-production-dialog.h \
    city-window.cpp city-window.h \
    destination-dialog.cpp destination-dialog.h \
    error-utils.cpp error-utils.h \
    fight-window.cpp fight-window.h \
    game-preferences-dialog.cpp game-preferences-dialog.h \
    game-options-dialog.cpp game-options-dialog.h \
    game-window.cpp game-window.h \
    hero-dialog.cpp hero-dialog.h \
    hero-offer-dialog.cpp hero-offer-dialog.h \
    surrender-dialog.cpp surrender-dialog.h \
    sage-dialog.cpp sage-dialog.h \
    ruin-rewarded-dialog.cpp ruin-rewarded-dialog.h \
    ruin-report-dialog.cpp ruin-report-dialog.h \
    history-report-dialog.cpp history-report-dialog.h \
    report-dialog.cpp report-dialog.h \
    triumphs-dialog.cpp triumphs-dialog.h \
    diplomacy-dialog.cpp diplomacy-dialog.h \
    diplomacy-report-dialog.cpp diplomacy-report-dialog.h \
    load-scenario-dialog.cpp load-scenario-dialog.h \
    quest-assigned-dialog.cpp quest-assigned-dialog.h \
    quest-completed-dialog.cpp quest-completed-dialog.h \
    bar-chart.cpp bar-chart.h \
    line-chart.cpp line-chart.h \
    main.cpp main.h \
    quest-report-dialog.cpp quest-report-dialog.h \
    preferences-dialog.cpp preferences-dialog.h \
    stack-info-dialog.cpp stack-info-dialog.h \
    splash-window.cpp splash-window.h \
    image-helpers.cpp image-helpers.h \
    gtksdl.c gtksdl.h \
    glade-helpers.h \
    input-helpers.h

INCLUDES = \
   $(GTKMM_CFLAGS) \
   $(SDL_CFLAGS)

AM_CXXFLAGS = -Wall
