MAINTAINERCLEANFILES= Makefile.in

lordsawararmydefaultdir = $(datadir)/lordsawar/army/bigdefault
lordsawararmydefault_DATA = \
	bigdefault.xml \
	archers.png \
	archons.png \
	catapults.png \
	daemons.png \
	devils.png \
	dragons.png \
	dwarves.png \
	elementals.png \
	elephants.png \
	ghosts.png \
	giantbats.png \
	giants.png \
	giantworms.png \
	griffins.png \
	heavycav.png \
	heavyinf.png \
	hero.png \
	lightcav.png \
	lightinf.png \
	minotaurs.png \
	orcishmob.png \
	pegasi.png \
	pikeman.png \
	scouts.png \
	spiders.png \
	unicorns.png \
	wizards.png \
	wolfriders.png \
	stackship.png \
	plantedstandard.png

EXTRA_DIST = \
	README \
	bigdefault.xml \
	archers.png \
	archons.png \
	catapults.png \
	daemons.png \
	devils.png \
	dragons.png \
	dwarves.png \
	elementals.png \
	elephants.png \
	ghosts.png \
	giantbats.png \
	giants.png \
	giantworms.png \
	griffins.png \
	heavycav.png \
	heavyinf.png \
	hero.png \
	lightcav.png \
	lightinf.png \
	minotaurs.png \
	orcishmob.png \
	pegasi.png \
	pikeman.png \
	scouts.png \
	spiders.png \
	unicorns.png \
	wizards.png \
	wolfriders.png \
	stackship.png \
	plantedstandard.png
