MAINTAINERCLEANFILES= Makefile.in

lordsawararmydefaultdir = $(datadir)/lordsawar/army/default

      
default.lwa: default.lwa.in
	LC_ALL=C $(INTLTOOL_MERGE) -x -u -c $(top_builddir)/po/.intltool-merge-cache $(top_srcdir)/po $(srcdir)/default.lwa.in $(builddir)/default.lwa
DISTCLEANFILES = default.lwa

lordsawararmydefault_DATA = \
	default.lwa \
	archers.png \
	archons.png \
	catapults.png \
	daemons.png \
	devils.png \
	dragons.png \
	dwarves.png \
	elementals.png \
	elephants.png \
	ghosts.png \
	giantbats.png \
	giants.png \
	giantworms.png \
	griffins.png \
	heavycav.png \
	heavyinf.png \
	hero.png \
	lightcav.png \
	lightinf.png \
	minotaurs.png \
	orcishmob.png \
	pegasi.png \
	pikeman.png \
	scouts.png \
	spiders.png \
	unicorns.png \
	wizards.png \
	wolfriders.png \
	stackship.png \
	plantedstandard.png \
	items.png

EXTRA_DIST = \
	default.lwa.in \
	README \
	archers.png \
	archons.png \
	catapults.png \
	daemons.png \
	devils.png \
	dragons.png \
	dwarves.png \
	elementals.png \
	elephants.png \
	ghosts.png \
	giantbats.png \
	giants.png \
	giantworms.png \
	griffins.png \
	heavycav.png \
	heavyinf.png \
	hero.png \
	lightcav.png \
	lightinf.png \
	minotaurs.png \
	orcishmob.png \
	pegasi.png \
	pikeman.png \
	scouts.png \
	spiders.png \
	unicorns.png \
	wizards.png \
	wolfriders.png \
	stackship.png \
	plantedstandard.png \
	items.png
