MAINTAINERCLEANFILES= Makefile.in

freelordsarmyheroesdir = $(datadir)/freelords/army/heroes
freelordsarmyheroes_DATA = \
	barbarian.png \
	amazone.png \
	sandman.png \
	goblin.png \
	male_orc.png \
	orc_female.png

EXTRA_DIST = \
	barbarian.png \
	amazone.png \
	sandman.png \
	goblin.png \
	male_orc.png \
	orc_female.png
