MAINTAINERCLEANFILES= Makefile.in

lordsawararmyheroesdir = $(datadir)/lordsawar/army/heroes
lordsawararmyheroes_DATA = \
	barbarian.png \
	amazone.png \
	sandman.png \
	goblin.png \
	male_orc.png \
	orc_female.png

EXTRA_DIST = \
	barbarian.png \
	amazone.png \
	sandman.png \
	goblin.png \
	male_orc.png \
	orc_female.png
