MAINTAINERCLEANFILES= Makefile.in

freelordsarmyimperialdir = $(datadir)/freelords/army/imperial
freelordsarmyimperial_DATA = \
	knight.png \
	unicorn.png \
	mage.png \
	dragon.png \
	holy_warrior.png \
	transport.png \
	frigate.png

EXTRA_DIST = \
	knight.png \
	unicorn.png \
	mage.png \
	dragon.png \
	holy_warrior.png \
	transport.png \
	frigate.png
