MAINTAINERCLEANFILES= Makefile.in

lordsawararmyimperialdir = $(datadir)/lordsawar/army/imperial
lordsawararmyimperial_DATA = \
	knight.png \
	unicorn.png \
	mage.png \
	dragon.png \
	holy_warrior.png \
	transport.png \
	frigate.png

EXTRA_DIST = \
	knight.png \
	unicorn.png \
	mage.png \
	dragon.png \
	holy_warrior.png \
	transport.png \
	frigate.png
