MAINTAINERCLEANFILES= Makefile.in

freelordsarmymonstersdir = $(datadir)/freelords/army/monsters
freelordsarmymonsters_DATA = \
	troll.png \
	sheep.png \
	woodface.png \
	beholder.png \
	demonspawn.png \
	demonspawn_big.jpg \
	hydra.png \
	ooze.png \
	octopus.png

EXTRA_DIST = \
	troll.png \
	sheep.png \
	woodface.png \
	beholder.png \
	demonspawn.png \
	demonspawn_big.jpg \
	hydra.png \
	ooze.png \
	octopus.png
