MAINTAINERCLEANFILES= Makefile.in

lordsawararmyorcsdir = $(datadir)/lordsawar/army/orcs
lordsawararmyorcs_DATA = \
	thrower.png \
	shaman.png \
	catapult.png \
	wolfrider.png \
	batrider.png \
	galeon.png \
	dreadnought.png

EXTRA_DIST = \
	thrower.png \
	shaman.png \
	catapult.png \
	wolfrider.png \
	batrider.png \
	galeon.png \
	dreadnought.png
